# animus-trigger-slack

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  plugin.toml
.github/workflows/: ci.yml  release.yml
src/: backend.rs  config.rs  dispatch.rs  events.rs  lib.rs  main.rs  socket.rs  web_api.rs
tests/: contract.rs  outbound.rs
